--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,7 +10,9 @@
 
   <body>
     <header>
-      <h3 id="quizz_spec"></h3>
+      <div id="quiz_spec">
+        <h3></h3>
+      </div>
       <div id="theme_switcher">
         <img src="assets/images/icon-sun-dark.svg" alt="sun icon them switcher" />
         <button>
@@ -66,6 +68,6 @@
       </aside>
     </main>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
