fix : icon theme switcher change on theme changing

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,11 +14,11 @@
         <h3></h3>
       </div>
       <div id="theme_switcher">
-        <img src="assets/images/icon-sun-dark.svg" alt="sun icon them switcher" />
+        <span class="sun_icon"></span>
         <button>
           <span></span>
         </button>
-        <img src="assets/images/icon-moon-dark.svg" alt="moon icon them switcher" />
+        <span class="moon_icon"></span>
       </div>
     </header>
 
@@ -67,7 +67,6 @@
         </ul>
       </aside>
     </main>
-
-    <script type="module" src="script.js"></script>
+    <script defer type="module" src="script.js"></script>
   </body>
 </html>
