fix : responsive, fonts preloads

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
     <title>Frontend Mentor | Frontend quiz app</title>
+    <link rel="preload" href="assets/fonts/static/Rubik-Light.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="assets/fonts/static/Rubik-Medium.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="assets/fonts/static/Rubik-Regular.ttf" as="font" type="font/ttf" crossorigin>
     <link rel="stylesheet" href="style.css" />
   </head>
 
